[package]
name = "unidoku"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'CssStyleDeclaration',
  'HtmlDivElement',
  'NodeList',
  'HtmlInputElement',
  'InputEvent',
  'EventTarget',
  'HtmlButtonElement',
  'MouseEvent',
]
